# zyraxbuster

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Contributing.md  Home.md  Installation.md  LICENSE  README.md  SECURITY.md  Usage.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: Assistant-Knowledge.md  Contributing.md  Home.md  Installation.md  Usage.md
src/: cli.rs  main.rs  scanner.rs  wordlist.rs
