[package]
name = "zyraxbuster"
version = "0.2.0"
edition = "2021"
authors = ["you"]
description = "Fast async directory/content discovery tool written in Rust"

[[bin]]
name = "zyraxbuster"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
clap = { version = "=4.4.18", features = ["derive"] }
clap_lex = "=0.6.0"
url = "=2.4.1"
idna = "=0.4.0"
indexmap = "=2.2.6"
indicatif = "0.17"
futures = "0.3"
colored = "2"
rand = "0.8"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
